removed ChatColor from every location that it could be removed from, excluding dependencies such as FastBoard and DecentHolograms